feat: implement password encryption in authentication flow